@@ -2,14 +2,4 @@ DONE
 
 TODO
 
-    -------------
-
-    Add a BUILDING.md
-
-    People should know how to build this when they get it.
-
-    -------------
-
-    Ship it. Go back to writing articles. You're done with R&D for a while.
-
-    -------------
+    Add a README.md
